--- a/Window/Window.ui
+++ b/Window/Window.ui
@@ -6,12 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>602</width>
+    <width>606</width>
     <height>665</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="iconSize">
+   <size>
+    <width>30</width>
+    <height>30</height>
+   </size>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="tr">
@@ -117,7 +126,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="tj_yzhui">
+   <widget class="QPushButton" name="tj_yhui">
     <property name="geometry">
      <rect>
       <x>400</x>
@@ -133,7 +142,7 @@
      </font>
     </property>
     <property name="text">
-     <string>tj-yzhui
+     <string>tj-yhui
 圆锥体积</string>
     </property>
    </widget>
@@ -338,29 +347,6 @@
      <string>E n t e r</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="msgbox">
-    <property name="geometry">
-     <rect>
-      <x>1</x>
-      <y>1</y>
-      <width>600</width>
-      <height>109</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Corbel Light</family>
-      <pointsize>20</pointsize>
-     </font>
-    </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Corbel Light'; font-size:20pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;right&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'SimSun';&quot;&gt;0.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="key7">
     <property name="geometry">
      <rect>
@@ -456,7 +442,7 @@ p, li { white-space: pre-wrap; }
      <string>1</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_23">
+   <widget class="QPushButton" name="key2">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -644,6 +630,26 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="text">
      <string>÷</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>601</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Microsoft JhengHei Light</family>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="plainText">
+     <string>
+</string>
     </property>
    </widget>
   </widget>
