--- a/Window.ui
+++ b/Window.ui
@@ -324,6 +324,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>E n t e r</string>
     </property>
@@ -342,6 +345,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>7</string>
@@ -362,6 +368,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>8</string>
     </property>
@@ -380,6 +389,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>9</string>
@@ -400,6 +412,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>3</string>
     </property>
@@ -418,6 +433,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>1</string>
@@ -438,6 +456,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>2</string>
     </property>
@@ -456,6 +477,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>6</string>
@@ -476,6 +500,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>4</string>
     </property>
@@ -494,6 +521,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>5</string>
@@ -514,6 +544,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>0</string>
     </property>
@@ -532,6 +565,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>30</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>.</string>
@@ -552,6 +588,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>＋</string>
     </property>
@@ -570,6 +609,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>×</string>
@@ -590,6 +632,9 @@
       <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>－</string>
     </property>
@@ -608,6 +653,9 @@
       <family>Microsoft JhengHei Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>÷</string>
@@ -964,6 +1012,9 @@
       <family>Bahnschrift Light</family>
       <pointsize>20</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="readOnly">
      <bool>true</bool>
